# bitmap-permutation

./: CMakeLists.txt  bitmap_permutation-test.cu
